src-ken&y/objects/Financial_Report__c.object
<CustomObject>
    <customHelpPage>Help_Financial_Reports</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chunks_Per_Request__c</fullName>
        <description>Number of chunks per request.  Adjust this to optimize report loading time without exceeding any limits.</description>
        <label>Chunks Per Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set to filter this report by a company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Financial Reports</relationshipLabel>
        <relationshipName>Financial_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compare_Periods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compare Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compare_Quarters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compare Quarters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Report_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to show the name of the financial report in the report itself.</description>
        <label>Display Report Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drill_Down_Report_ID__c</fullName>
        <label>Drill Down Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Financial Reports (End Period)</relationshipLabel>
        <relationshipName>Financial_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Financial Reports</relationshipLabel>
        <relationshipName>Financial_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <description>Introductory text to appear at the top of the report, after the report name</description>
        <label>Introduction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Numeric_Scale__c</fullName>
        <defaultValue>2</defaultValue>
        <description>show 0 , 1 or 2 decimal places</description>
        <inlineHelpText>The number of decimal places to show in the report/section/item.</inlineHelpText>
        <label>Numeric Scale</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <label>Period Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Options__c</fullName>
        <label>Period Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Twelve Months</fullName>
                </value>
                <value>
                    <fullName>Six Months</fullName>
                </value>
                <value>
                    <fullName>Three Months</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>Custom Dates</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Financial Reports</relationshipLabel>
        <relationshipName>Financial_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarters__c</fullName>
        <label>Quarters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportID__c</fullName>
        <label>ReportID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Columns__c</fullName>
        <label>Report Columns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TC-Debits</fullName>
                </value>
                <value>
                    <fullName>TC-Credits</fullName>
                </value>
                <value>
                    <fullName>FC-Debits</fullName>
                </value>
                <value>
                    <fullName>FC-Credits</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_End_Date__c</fullName>
        <label>Report End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Report_Object_Name__c</fullName>
        <description>The API name of the object that is being reported on</description>
        <label>Report Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Span__c</fullName>
        <label>Report Span</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Month</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Start_Date__c</fullName>
        <label>Report Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Report_Styles__c</fullName>
        <description>User supplied CSS styles to be applied to the output of this report</description>
        <inlineHelpText>CSS code that allows you to customize the formatting of the report.</inlineHelpText>
        <label>Report Styles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <inlineHelpText>Some report types require custom processing of the report types.</inlineHelpText>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Trial Balance</fullName>
                </value>
                <value>
                    <fullName>Cash Flow</fullName>
                </value>
                <value>
                    <fullName>Budget Listing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rows_Per_Request__c</fullName>
        <description>Number of rows per request. Adjust this to optimize report loading time without exceeding any limits.</description>
        <label>Rows Per Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Criteria__c</fullName>
        <label>Segment Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_Symbols__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display or hide currency symbols</description>
        <label>Show Symbols</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Period</label>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Financial Reports (Start Period)</relationshipLabel>
        <relationshipName>Financial_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Symbols_First_Last__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Symbols on the first and last rows of a report only</description>
        <label>Symbols First Last</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Report_Type__c</columns>
        <columns>Company__c</columns>
        <columns>Period_Name__c</columns>
        <columns>Introduction__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Report_ID</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISPICKVAL(Report_Type__c, &quot;other&quot;)),
    ISBLANK(ReportID__c)
)</errorConditionFormula>
        <errorDisplayField>ReportID__c</errorDisplayField>
        <errorMessage>Report ID required</errorMessage>
    </validationRules>
</CustomObject>